--- a/styles.css
+++ b/styles.css
@@ -601,9 +601,6 @@ body {
 } */
 
 @media screen and (max-width: 769px) {
-body{
-    background-color: blue;
-}
     .main-left {
         position: absolute;
         left: -76%;
@@ -613,9 +610,60 @@ body{
         padding-top: 1%;
         background-color: #121212;
     }
+    #close{
+        background-color: transparent;
+        position: absolute;
+        right: 0;
+    }
 
     .main-right {
         width: 99vw;
+        height: 99dvh;
+        gap: 1%;
+        padding-top: 2%;
+    }
+
+    #close,
+    #show {
+        display: block;
+        cursor: pointer;
+    }
+
+    #go-back,
+    #go-fwd {
+        display: none;
+    }
+
+}
+
+@media screen and (max-width: 425px) {
+    :root {
+        --borderR: 12px;
+    }
+
+    ::-webkit-scrollbar {
+        width: 2px;
+    }
+
+    /* .main-left {
+        position: absolute;
+        left: -76%;
+        width: 75%;
+        gap: 1%;
+        z-index: 1;
+        padding-top: 1%;
+        background-color: #121212;
+    } */
+
+    /* .main-right {
+        width: 99vw;
+        height: 99dvh;
+        gap: 1%;
+        padding-top: 2%;
+    } */
+
+    .login-bar {
+        background-color: #121212;
     }
 
     #close,
@@ -634,10 +682,44 @@ body{
     }
 
     .songs-header {
-        height: 35%;
+        min-height: 45%;
+        height: fit-content;
+        flex-direction: column;
+        align-items: center;
+        padding-top: 10%;
+        gap: 2%;
     }
-    .player{
+    
+    #playlistImage {
+        width: 11rem;
+        height: 11rem;
+        box-shadow: 1px 1px 30px black;
+    }
+    
+    #title {
+        width: 95%;
+        display: flex;
+        height: 4rem;
+        /* flex-grow: 1; */
+        gap: 10%;
+    }
+
+    .title>span {
+        font-size: 1rem;
+    }
+    
+    .title>span:first-child {
+        font-size: 1.1rem;
+    }
+    
+    .player {
         background-color: #222222;
         width: 98%;
+    }
+    
+    #player-img {
+        height: 100%;
+        border-radius: var(--borderRSecond);
+        mask-image: linear-gradient(to right, rgb(238, 224, 224) 50%, rgba(0, 0, 0, 0));
     }
 }
